tests/fixtures/diagnostics/compile-bad-selector.ascii.stderr
Error: Expected identifier.
  ,
1 | . {
  |  ^
  '
  compile-bad-selector.scss 1:2  root stylesheet
